--- a/index.html
+++ b/index.html
@@ -71,17 +71,22 @@
                <ul>
                   <li>
                      <a
+                        target="_blank"
                         href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/Dealing_with_files#what_else_should_be_done"
                         >MDN web docs - Dealing with files</a
                      >
                   </li>
                   <li>
-                     <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics"
+                     <a
+                        target="_blank"
+                        href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics"
                         >MDN web docs - HTML basics</a
                      >
                   </li>
                   <li>
-                     <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics"
+                     <a
+                        target="_blank"
+                        href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics"
                         >MDN web docs - CSS basics</a
                      >
                   </li>
@@ -92,7 +97,9 @@
                      >
                   </li>
                   <li>
-                     <a href="https://www.javatpoint.com/javascript-tutorial">Javatpoint - Learn JavaScript Tutorial</a>
+                     <a target="_blank" href="https://www.javatpoint.com/javascript-tutorial"
+                        >Javatpoint - Learn JavaScript Tutorial</a
+                     >
                   </li>
                </ul>
             </section>
