--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html prefix="og" lang="en">
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+      <meta property="og:title" content="Web Page Basics" />
+      <meta property="og:type" content="website" />
+      <meta property="og:image" content="img/website_preview.png" />
+      <meta property="og:url" content="https://jos3ph1205.github.io/web-basics-documentation/" />
+
       <title>Web Page Basics</title>
       <link rel="stylesheet" href="style.css" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
