--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   As stated earlier, this documentation was created as a <em>project</em> created for freeCodeCamp.org
                   and may be subject to errors. There may be minor spelling / grammar mistakes and incorrect /
                   misleading information. If you do encounter such problems, feel free to notify me of there
-                  <a href="https://forum.freecodecamp.org/t/technical-documentation-web-basics/670863">here</a>.
+                  <a target="_blank" href="https://forum.freecodecamp.org/t/technical-documentation-web-basics/670863">here</a>.
                </p>
             </section>
 
