--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          <header>Web Basics</header>
          <div class="sidebar-category">
             <div class="languages">
-               <a href="html.html"><i class="fa-brands fa-html5"></i></a>
+               <a  href="html.html"><i class="fa-brands fa-html5"></i></a>
                <a href="css.html"><i class="fa-brands fa-css3-alt"></i></a>
                <a href="javascript.html"><i class="fa-brands fa-square-js"></i></a>
                <a href="files.html"><i class="fa-regular fa-file-code"></i></a>
@@ -30,10 +30,10 @@
          </div>
          <div id="sidebar" class="sidebar-links">
             <ol>
-               <li><a href="#Overview">Overview</a></li>
-               <li><a href="#References">References</a></li>
-               <li><a href="#Important">Important</a></li>
-               <li><a href="#Creator">Creator</a></li>
+               <li><a class="nav-link" href="#Overview">Overview</a></li>
+               <li><a class="nav-link" href="#References">References</a></li>
+               <li><a class="nav-link" href="#Important">Important</a></li>
+               <li><a class="nav-link" href="#Creator">Creator</a></li>
             </ol>
          </div>
       </aside>
