--- a/files.html
+++ b/files.html
@@ -30,22 +30,22 @@
          </div>
          <div id="sidebar" class="sidebar-links">
             <ol>
-               <li><a href="#JavaScript_Basics">Creating Files</a></li>
-               <li><a href="#File_Location">File Location</a></li>
-               <li><a href="#Naming_Your_Files">Naming Your Files</a></li>
+               <li><a class="nav-link" href="#JavaScript_Basics">Creating Files</a></li>
+               <li><a class="nav-link" href="#File_Location">File Location</a></li>
+               <li><a class="nav-link" href="#Naming_Your_Files">Naming Your Files</a></li>
                <li class="toggle">
                   <details>
                      <summary>Website Structure</summary>
                      <ol>
-                        <li><a href="#Website_Structure">Basics</a></li>
-                        <li><a href="#index_html">Index</a></li>
-                        <li><a href="#images_folder">Images Folder</a></li>
-                        <li><a href="#styles_folder">Styles Folder</a></li>
-                        <li><a href="#scripts_folder">SCripts Folder</a></li>
+                        <li><a class="nav-link" href="#Website_Structure">Basics</a></li>
+                        <li><a class="nav-link" href="#index_html">Index</a></li>
+                        <li><a class="nav-link" href="#images_folder">Images Folder</a></li>
+                        <li><a class="nav-link" href="#styles_folder">Styles Folder</a></li>
+                        <li><a class="nav-link" href="#scripts_folder">SCripts Folder</a></li>
                      </ol>
                   </details>
                </li>
-               <li><a href="#File_Paths">File Paths</a></li>
+               <li><a class="nav-link" href="#File_Paths">File Paths</a></li>
             </ol>
          </div>
       </aside>
