--- a/css.html
+++ b/css.html
@@ -30,23 +30,23 @@
          </div>
          <div id="sidebar" class="sidebar-links">
             <ol>
-               <li><a href="#CSS_Basics">Introduction</a></li>
+               <li><a class="nav-link" href="#CSS_Basics">Introduction</a></li>
                <li class="toggle">
                   <details>
                      <summary>Rulesets</summary>
                      <ol>
-                        <li><a href="#Rulesets">Introduction</a></li>
-                        <li><a href="#Selecting_Multiple_Elements">Selecting Multiple Elements</a></li>
+                        <li><a class="nav-link" href="#Rulesets">Introduction</a></li>
+                        <li><a class="nav-link" href="#Selecting_Multiple_Elements">Selecting Multiple Elements</a></li>
                         <li class="toggle">
                            <details>
                               <summary>Types Of Selectors</summary>
                               <ol>
-                                 <li><a href="#Types_Of_Selectors">Introduction</a></li>
-                                 <li><a href="#Element_Selector">Element Selector</a></li>
-                                 <li><a href="#ID_Selector">ID Selectors</a></li>
-                                 <li><a href="#Class_Selector">Class Selector</a></li>
-                                 <li><a href="#Attribute_Selector">Attribute Selector</a></li>
-                                 <li><a href="#Pseudo-Class_Selector">Pseudo Selector</a></li>
+                                 <li><a class="nav-link" href="#Types_Of_Selectors">Introduction</a></li>
+                                 <li><a class="nav-link" href="#Element_Selector">Element Selector</a></li>
+                                 <li><a class="nav-link" href="#ID_Selector">ID Selectors</a></li>
+                                 <li><a class="nav-link" href="#Class_Selector">Class Selector</a></li>
+                                 <li><a class="nav-link" href="#Attribute_Selector">Attribute Selector</a></li>
+                                 <li><a class="nav-link" href="#Pseudo-Class_Selector">Pseudo Selector</a></li>
                               </ol>
                            </details>
                         </li>
