--- a/javascript.html
+++ b/javascript.html
@@ -30,29 +30,29 @@
          </div>
          <div id="sidebar" class="sidebar-links">
             <ol>
-               <li><a href="#JavaScript_Basics">Introduction</a></li>
-               <li><a href="#You_Should_Know">You Should Know</a></li>
+               <li><a class="nav-link" href="#JavaScript_Basics">Introduction</a></li>
+               <li><a class="nav-link" href="#You_Should_Know">You Should Know</a></li>
                <li class="toggle">
                   <details>
                      <summary>Variables</summary>
                      <ol>
-                        <li><a href="#Variables">Basics</a></li>
-                        <li><a href="#Strings">Strings</a></li>
-                        <li><a href="#Numbers">Numbers</a></li>
-                        <li><a href="#Booleans">Booleans</a></li>
-                        <li><a href="#Arrays">Arrays</a></li>
-                        <li><a href="#Objects">Objects</a></li>
+                        <li><a class="nav-link" href="#Variables">Basics</a></li>
+                        <li><a class="nav-link" href="#Strings">Strings</a></li>
+                        <li><a class="nav-link" href="#Numbers">Numbers</a></li>
+                        <li><a class="nav-link" href="#Booleans">Booleans</a></li>
+                        <li><a class="nav-link" href="#Arrays">Arrays</a></li>
+                        <li><a class="nav-link" href="#Objects">Objects</a></li>
                      </ol>
                   </details>
                </li>
-               <li><a href="#Comments">Comments</a></li>
+               <li><a class="nav-link" href="#Comments">Comments</a></li>
                <li class="toggle">
                   <details>
                      <summary>Operators</summary>
                      <ol>
-                        <li><a href="#Operators">Basics</a></li>
-                        <li><a href="#Arithmetic_Operators">Arithmetic Operators</a></li>
-                        <li><a href="#Comparison_Operators">Comparison Operators</a></li>
+                        <li><a class="nav-link" href="#Operators">Basics</a></li>
+                        <li><a class="nav-link" href="#Arithmetic_Operators">Arithmetic Operators</a></li>
+                        <li><a class="nav-link" href="#Comparison_Operators">Comparison Operators</a></li>
                      </ol>
                   </details>
                </li>
