--- a/css.html
+++ b/css.html
@@ -53,17 +53,17 @@
                      </ol>
                   </details>
                </li>
-               <li><a href="#The_Box_Model">The Box Model</a></li>
+               <li><a class="nav-link" href="#The_Box_Model">The Box Model</a></li>
                <li class="toggle">
                   <details>
                      <summary>Basic Styling</summary>
                      <ol>
-                        <li><a href="#Basic_Styling">Introduction</a></li>
-                        <li><a href="#Page_Color">Page Color</a></li>
-                        <li><a href="#Styling_The_Body">Styling The Body</a></li>
-                        <li><a href="#Styling_The_Main_Title">Styling The Main Title</a></li>
-                        <li><a href="#Centering_Images">Centering Images</a></li>
-                        <li><a href="#Result">Result</a></li>
+                        <li><a class="nav-link" href="#Basic_Styling">Introduction</a></li>
+                        <li><a class="nav-link" href="#Page_Color">Page Color</a></li>
+                        <li><a class="nav-link" href="#Styling_The_Body">Styling The Body</a></li>
+                        <li><a class="nav-link" href="#Styling_The_Main_Title">Styling The Main Title</a></li>
+                        <li><a class="nav-link" href="#Centering_Images">Centering Images</a></li>
+                        <li><a class="nav-link" href="#Result">Result</a></li>
                      </ol>
                   </details>
                </li>
