--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <div class="sidebar-category">
             <div class="languages">
                <a  href="html.html"><i class="fa-brands fa-html5"></i></a>
-               <a href="css"><i class="fa-brands fa-css3-alt"></i></a>
+               <a href="css.html"><i class="fa-brands fa-css3-alt"></i></a>
                <a href="javascript.html"><i class="fa-brands fa-square-js"></i></a>
                <a href="files.html"><i class="fa-regular fa-file-code"></i></a>
             </div>
