--- a/css-basics/index.html
+++ b/css-basics/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Web Page Basics</title>
-      <link rel="stylesheet" href="style.css" />
+      <link rel="stylesheet" href="../style.css" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
    </head>
    <div id="img-preview" class="img-preview hidden">
