--- a/guides/css-basics/index.html
+++ b/guides/css-basics/index.html
@@ -97,7 +97,7 @@
             <section id="Rulesets" class="main-section">
                <header>Rulesets</header>
 
-               <img class="transparent-img demo-img" src="img/css_rulset_example.png" alt="" />
+               <img class="transparent-img demo-img" src="../../img/css_rulset_example.png" alt="" />
                <p>
                   The whole structure is called a ruleset.
                   <em>(The term ruleset is often referred to as just rule.)</em>. A ruleset's main parts are as follows:
@@ -448,7 +448,7 @@ h2 <dec>
             <!-- THE-BOX-MODEL -->
             <section id="The_Box_Model" class="main-section">
                <header>The Box Model</header>
-               <img class="demo-img" src="img/box_quote.jpg" alt="" />
+               <img class="demo-img" src="../../img/box_quote.jpg" alt="" />
                <p>
                   Something you're bound to notice at some point is that: a lot of CSS is about boxes. Most HTML
                   elements on your page can be thought of as boxes sitting on top of other boxes, or boxes within a box
@@ -468,7 +468,7 @@ h2 <dec>
                      <code class="inline-code">padding</code> — the space around the content outside of the border.
                   </li>
                </ul>
-               <img class="demo-img" src="img/css_box_model.png" alt="" />
+               <img class="demo-img" src="../../img/css_box_model.png" alt="" />
                <br />
                <p>In this section we also use:</p>
                <ul>
@@ -526,7 +526,7 @@ h2 <dec>
                </p>
                <p>Right off the bat, without any styling, the website looks like a mess.</p>
                <video class="example-video demo-video" loop autoplay muted>
-                  <source src="img/website_example.mp4" type="video/mp4" />
+                  <source src="../../img/website_example.mp4" type="video/mp4" />
                   Oops! Something went wrong while trying to load this video.
                </video>
             </section>
@@ -722,7 +722,7 @@ h2 <dec>
                <p>
                   If your were able to follow along and complete the steps, you should have a page that looks like this:
                </p>
-               <img class="demo-img" src="img/basic_styling_final_result.png" alt="" />
+               <img class="demo-img" src="../../img/basic_styling_final_result.png" alt="" />
                <p>Go ahead and give yourself a pat on the back. 🎉</p>
             </section>
          </div>
