--- a/guides/html-basics/index.html
+++ b/guides/html-basics/index.html
@@ -79,7 +79,7 @@
             <section id="Elements" class="main-section">
                <header>Elements</header>
 
-               <img class="transparent-img demo-img" src="img/html_element_example.svg" alt="" />
+               <img class="transparent-img demo-img" src="../../img/html_element_example.svg" alt="" />
                <p>Let's break this down a bit. The element's main parts are as follows:</p>
                <ul>
                   <li>
@@ -127,7 +127,7 @@
             <section id="Attributes" class="main-section">
                <header>Attributes</header>
 
-               <img class="transparent-img demo-img" src="img/html_attribute_example.svg" alt="" />
+               <img class="transparent-img demo-img" src="../../img/html_attribute_example.svg" alt="" />
                <p>
                   Attributes contain additional information about an element. Here,
                   <code class="inline-code">class</code> is the attribute's <em>name</em> and
@@ -344,7 +344,7 @@
                   </code>
                </div>
                <div class="code-output">
-                  <img class="demo-img" src="img/heading_types_output_example.png" alt="" />
+                  <img class="demo-img" src="../../img/heading_types_output_example.png" alt="" />
                </div>
                <div class="note-card">
                   <p>
@@ -426,7 +426,7 @@
                </div>
 
                <div class="code-output">
-                  <img class="demo-img" src="img/list_output_example.png" alt="" />
+                  <img class="demo-img" src="../../img/list_output_example.png" alt="" />
                </div>
             </section>
 
